Allow to add/remove portlets

--- a/web/gulliver.html
+++ b/web/gulliver.html
@@ -13,10 +13,10 @@
   <script src="http://cdnjs.cloudflare.com/ajax/libs/flot/0.8.1/jquery.flot.navigate.min.js"></script>
 </head>
 <body>
-  <div id="menu-bar">
-    <!--
-    <nav id="tab-bar">Nav</nav>
-    -->
+  <div id="top-bar">
+    <div id="toolbar"><i id="add-portlet-icon" class="icon-plus"></i>
+      <ul id="add-portlet-menu"></ul>
+    </div>
     <div id="ws-status">
       <span id="ws-status-text">WS status</span> <i id="ws-status-icon" class="icon-question"></i>
     </div>
