Refactor WS status handling and enable pausing
Trigger a custom event on WS event. This allows to dissociate low-level WS
handling and GUI changes.
Allow to reopen WebSocket

Add a button to pause data events and reconnect when disconnected.

--- a/web/gulliver.html
+++ b/web/gulliver.html
@@ -14,7 +14,9 @@
 </head>
 <body>
   <div id="top-bar">
-    <div id="toolbar"><i id="add-portlet-icon" class="icon-plus"></i>
+    <div id="toolbar">
+      <i id="add-portlet-icon" class="icon-plus"></i>
+      <i id="play-pause-icon" class="icon-refresh"></i>
       <ul id="add-portlet-menu"></ul>
     </div>
     <div id="ws-status">
