Remove extra space between toolbar icons

--- a/web/gulliver.html
+++ b/web/gulliver.html
@@ -15,8 +15,7 @@
 <body>
   <div id="top-bar">
     <div id="toolbar">
-      <i id="add-portlet-icon" class="icon-plus"></i>
-      <i id="play-pause-icon" class="icon-refresh"></i>
+      <i id="add-portlet-icon" class="icon-plus"></i><i id="play-pause-icon" class="icon-refresh"></i>
       <ul id="add-portlet-menu"></ul>
     </div>
     <div id="ws-status">
