--- a/web/guili.html
+++ b/web/guili.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Gulliver</title>
+  <title>Guili</title>
   <link href="http://netdna.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet"></link>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
   <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/smoothness/jquery-ui.min.css" rel="stylesheet"></link>
-  <link href="gulliver.css" rel="stylesheet"></link>
+  <link href="guili.css" rel="stylesheet"></link>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/flot/0.8.1/jquery.flot.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/flot/0.8.1/jquery.flot.resize.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/flot/0.8.1/jquery.flot.navigate.min.js"></script>
@@ -32,7 +32,7 @@
   </div>
 
   <script src="tools.js"></script>
-  <script src="gulliver.js"></script>
+  <script src="guili.js"></script>
 
 </body>
 </html> 
