Update Font Awesome to 4.0.3
Also don't use 'latest' link, it does not properly work anymore.

--- a/web/guili.html
+++ b/web/guili.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Guili</title>
-  <link href="http://netdna.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet"></link>
+  <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet"></link>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
   <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/smoothness/jquery-ui.min.css" rel="stylesheet"></link>
@@ -15,18 +15,18 @@
 <body>
   <div id="top-bar">
     <div id="toolbar">
-      <i id="add-portlet-icon" class="icon-plus"></i><i id="play-pause-icon" class="icon-refresh"></i>
+      <i id="add-portlet-icon" class="fa fa-plus"></i><i id="play-pause-icon" class="fa fa-refresh"></i>
       <ul id="add-portlet-menu"></ul>
     </div>
     <div id="ws-status">
-      <span id="ws-status-text">WS status</span> <i id="ws-status-icon" class="icon-question"></i>
+      <span id="ws-status-text">WS status</span> <i id="ws-status-icon" class="fa fa-question"></i>
     </div>
   </div>
 
   <div id="portlets">
     <!-- template for portlet element -->
     <div id="portlet-template" class="portlet">
-      <div class="portlet-header"><i class="icon-move"></i><i class="icon-remove"></i></div>
+      <div class="portlet-header"><i class="fa fa-arrows"></i><i class="fa fa-times"></i></div>
       <div class="portlet-content"></div>
     </div>
   </div>
