Use local versions of web dependencies
The download-extra.sh script download all dependencies.

--- a/web/guili.html
+++ b/web/guili.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <title>Guili</title>
-  <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet"></link>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
-  <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/smoothness/jquery-ui.min.css" rel="stylesheet"></link>
+  <link href="extra/css/font-awesome.min.css" rel="stylesheet"></link>
+  <script src="extra/js/jquery.min.js"></script>
+  <script src="extra/js/jquery-ui.min.js"></script>
+  <link href="extra/css/jquery-ui.min.css" rel="stylesheet"></link>
   <link href="guili.css" rel="stylesheet"></link>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/flot/0.8.1/jquery.flot.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/flot/0.8.1/jquery.flot.resize.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/flot/0.8.1/jquery.flot.navigate.min.js"></script>
+  <script src="extra/js/jquery.flot.min.js"></script>
+  <script src="extra/js/jquery.flot.resize.min.js"></script>
+  <script src="extra/js/jquery.flot.navigate.min.js"></script>
 </head>
 <body>
   <div id="top-bar">
