Allow to switch between several portlets configurations
Configurations are provided to the GUI by the guili server.
When started, the 'default' configuration is loaded.
Also allow to configure portlet width and height from options.

--- a/web/guili.html
+++ b/web/guili.html
@@ -15,8 +15,8 @@
 <body>
   <div id="top-bar">
     <div id="toolbar">
-      <i id="add-portlet-icon" class="fa fa-plus"></i><i id="play-pause-icon" class="fa fa-refresh"></i>
-      <ul id="add-portlet-menu"></ul>
+      <i id="set-configuration-icon" class="fa fa-folder-open"></i><i id="add-portlet-icon" class="fa fa-plus"></i><i id="play-pause-icon" class="fa fa-refresh"></i>
+      <ul id="set-configuration-menu"></ul><ul id="add-portlet-menu"></ul>
     </div>
     <div id="ws-status">
       <span id="ws-status-text">WS status</span> <i id="ws-status-icon" class="fa fa-question"></i>
