Adapt to new ROME messages

--- a/web/portlets/coordinates.html
+++ b/web/portlets/coordinates.html
@@ -2,7 +2,8 @@
 <table style="padding: 2px">
   <colgroup>
     <col></col>
-    <col style="width: 3.5em"></col>
+    <col style="width: 3.2em"></col>
+    <col style="width: 3.2em"></col>
     <col style="width: 3.5em"></col>
   </colgroup>
   <tbody>
@@ -10,9 +11,11 @@
       <th>Position</th>
       <td class="data-number">?</td>
       <td class="data-number">?</td>
+      <td class="data-number">?</td>
     </tr>
     <tr>
       <th>Velocity</th>
+      <td class="data-number">?</td>
       <td class="data-number">?</td>
       <td class="data-number">?</td>
     </tr>
