--- a/web/guili.html
+++ b/web/guili.html
@@ -15,7 +15,7 @@
 <body>
   <div id="top-bar">
     <div id="toolbar">
-      <i id="set-configuration-icon" class="fa fa-folder-open"></i><i id="add-portlet-icon" class="fa fa-plus"></i><i id="play-pause-icon" class="fa fa-refresh"></i>
+      <i id="edit-configuration-icon" class="fa fa-edit"></i><i id="set-configuration-icon" class="fa fa-folder-open"></i><i id="add-portlet-icon" class="fa fa-plus"></i><i id="play-pause-icon" class="fa fa-refresh"></i>
       <ul id="set-configuration-menu"></ul><ul id="add-portlet-menu"></ul>
     </div>
     <div id="ws-status">
@@ -30,6 +30,9 @@
       <div class="portlet-content"></div>
     </div>
   </div>
+
+  <!-- dialog -->
+  <div id="edit-configuration-dialog" style="display: none"><textarea></textarea></div>
 
   <script src="tools.js"></script>
   <script src="guili.js"></script>
