asserv: add information to the asserv portlet

--- a/web/portlets/asserv.html
+++ b/web/portlets/asserv.html
@@ -13,5 +13,11 @@
       <td class="data-number">?</td>
       <td class="data-number">?</td>
     </tr>
+    <tr>
+      <th>Carrot</th>
+      <td class="data-number">?</td>
+      <td class="data-number">?</td>
+      <td class="data-number">? / ?</td>
+    </tr>
   </tbody>
 </table>
