Display battery voltage, use red background if low

--- a/web/guili.html
+++ b/web/guili.html
@@ -18,6 +18,7 @@
       <i id="edit-configuration-icon" class="fa fa-edit"></i><i id="set-configuration-icon" class="fa fa-folder-open"></i><i id="add-portlet-icon" class="fa fa-plus"></i><i id="play-pause-icon" class="fa fa-refresh"></i>
       <ul id="set-configuration-menu"></ul><ul id="add-portlet-menu"></ul>
     </div>
+    <div id="battery-status">?</div>
     <div id="ws-status">
       <span id="ws-status-text">WS status</span> <i id="ws-status-icon" class="fa fa-question"></i>
     </div>
