meca: update for 2015
Display claw information.

--- a/web/portlets/meca.html
+++ b/web/portlets/meca.html
@@ -1,27 +1,20 @@
-<div class="portlet-title">Arms</div>
+<div class="portlet-title">Meca</div>
 <table style="padding: 2px">
   <colgroup>
     <col></col>
-    <col style="width: 3.2em"></col>
-    <col style="width: 3.2em"></col>
+    <col style="width: 2.0em"></col>
+    <col style="width: 2.0em"></col>
   </colgroup>
   <tbody>
-    <tr>
-      <th>Shoulder</th>
-      <td colspan="2" class="data-number">?</td>
+    <tr class="meca-elevator-left">
+      <th>Left</th>
+      <td style="text-align: center"><i class="fa fa-circle" style="color: gray"></i></td>
+      <td style="text-align: center">?</td>
     </tr>
-    <tr>
-      <th>Elbow</th>
-      <td colspan="2" class="data-number">?</td>
-    </tr>
-    <tr>
-      <th>Wrist</th>
-      <td colspan="2" class="data-number">?</td>
-    </tr>
-    <tr>
-      <th>Suckers</th>
-      <td class="data-boolean"><i class="fa fa-question"></i></td>
-      <td class="data-boolean"><i class="fa fa-question"></i></td>
+    <tr class="meca-elevator-right">
+      <th>Right</th>
+      <td style="text-align: center"><i class="fa fa-circle" style="color: gray"></i></td>
+      <td style="text-align: center">?</td>
     </tr>
   </tbody>
 </table>
