--- a/web/portlets/field.html
+++ b/web/portlets/field.html
@@ -1,1 +1,1 @@
-<object data="field.svg" type="image/svg+xml" style="width: 100%; padding: 3px"></object>
+<object data="field2015.svg" type="image/svg+xml" style="width: 100%; padding: 3px"></object>
