--- a/web/portlets/asserv.html
+++ b/web/portlets/asserv.html
@@ -19,5 +19,11 @@
       <td class="data-number">?</td>
       <td class="data-number">? / ?</td>
     </tr>
+    <tr>
+      <th>Field</th>
+      <td class="data-number">?</td>
+      <td class="data-number">?</td>
+      <td class="data-number"></td>
+    </tr>
   </tbody>
 </table>
