Change asserv portlet title from 'Coordinates' to 'Asserv'
This is shorter, and since we now append the robot name, it's better.

--- a/web/portlets/asserv.html
+++ b/web/portlets/asserv.html
@@ -1,4 +1,4 @@
-<div class="portlet-title">Coordinates</div>
+<div class="portlet-title">Asserv</div>
 <table style="padding: 2px">
   <colgroup>
     <col></col>
