Display asserv match timer in the last "field" column

--- a/web/portlets/asserv.html
+++ b/web/portlets/asserv.html
@@ -23,7 +23,7 @@
       <th>Field</th>
       <td class="data-number">?</td>
       <td class="data-number">?</td>
-      <td class="data-number"></td>
+      <td class="data-number">?</td>
     </tr>
   </tbody>
 </table>
