Rework meca for 2018, first steps
Start drawing the barillet.

Don't share "meca" portlet between Galipeur and Galipette anymore, their
meca will be different.

--- a/web/portlets/meca.html
+++ b/web/portlets/meca.html
@@ -1,20 +1,1 @@
-<div class="portlet-title">Meca</div>
-<table style="padding: 2px">
-  <colgroup>
-    <col></col>
-    <col style="width: 2.0em"></col>
-    <col style="width: 2.0em"></col>
-  </colgroup>
-  <tbody>
-    <tr class="meca-elevator-left">
-      <th>Left</th>
-      <td style="text-align: center"><i class="fa fa-circle" style="color: gray"></i></td>
-      <td style="text-align: center">?</td>
-    </tr>
-    <tr class="meca-elevator-right">
-      <th>Right</th>
-      <td style="text-align: center"><i class="fa fa-circle" style="color: gray"></i></td>
-      <td style="text-align: center">?</td>
-    </tr>
-  </tbody>
-</table>
+<object data="meca-barillet.svg" type="image/svg+xml" style="width: 100%; padding: 3px"></object>
