Finish cylinder SVG

--- a/web/portlets/meca.html
+++ b/web/portlets/meca.html
@@ -1,1 +1,1 @@
-<object data="meca-barillet.svg" type="image/svg+xml" style="width: 100%; padding: 3px"></object>
+<object data="meca-cylinder.svg" type="image/svg+xml" style="width: 100%; padding: 3px"></object>
