Reimplement modals, without jquery-ui

--- a/web/guili.html
+++ b/web/guili.html
@@ -29,11 +29,16 @@
     </div>
   </div>
 
-  <!-- dialog -->
-  <div id="edit-configuration-dialog" style="display: none"><textarea></textarea></div>
-  <div id="show-info-dialog" style="display: none">
-    <p><b>Bootload commands</b></p>
-    <ul id="show-info-bootload-commands"></ul>
+  <!-- modals -->
+  <div id="modals">
+    <div id="edit-configuration-modal">
+      <p><b>Configuration</b></p>
+      <textarea id="edit-configuration-text"></textarea>
+    </div>
+    <div id="show-info-modal">
+      <p><b>Bootload commands</b></p>
+      <ul id="show-info-bootload-commands"></ul>
+    </div>
   </div>
 
   <script src="tools.js"></script>
