Use a template to create portlet

--- a/web/guili.html
+++ b/web/guili.html
@@ -23,10 +23,12 @@
 
   <div id="portlets">
     <!-- template for portlet element -->
-    <div id="portlet-template" class="portlet">
-      <div class="portlet-header"><i class="fa fa-arrows"></i><i class="fa fa-times"></i></div>
-      <div class="portlet-content"></div>
-    </div>
+    <template id="portlet-template">
+      <div class="portlet">
+        <div class="portlet-header"><i class="fa fa-arrows"></i><i class="fa fa-times"></i></div>
+        <div class="portlet-content"></div>
+      </div>
+    </template>
   </div>
 
   <!-- modals -->
