Use Font Awesome 5
Don't use SVG icons for now as they are harder to update/access from JS.

--- a/web/guili.html
+++ b/web/guili.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="utf-8" />
   <title>Guili</title>
-  <link href="extra/css/font-awesome.min.css" rel="stylesheet"></link>
+  <link href="extra/css/fontawesome-all.min.css" rel="stylesheet"></link>
   <link href="guili.css" rel="stylesheet"></link>
 </head>
 <body>
   <div id="top-bar">
     <div id="toolbar">
-      <i id="edit-configuration-icon" class="fa fa-edit"></i><i id="set-configuration-icon" class="fa fa-folder-open"></i><i id="add-portlet-icon" class="fa fa-plus"></i><i id="show-info-icon" class="fa fa-info"></i><i id="play-pause-icon" class="fa fa-refresh"></i>
+      <i id="edit-configuration-icon" class="fas fa-edit"></i><i id="set-configuration-icon" class="fas fa-folder-open"></i><i id="add-portlet-icon" class="fas fa-plus"></i><i id="show-info-icon" class="fas fa-info"></i><i id="play-pause-icon" class="fa fa-sync-alt"></i>
       <ul id="set-configuration-menu"></ul><ul id="add-portlet-menu"></ul>
     </div>
     <div id="battery-status">?</div>
     <div id="ws-status">
-      <span id="ws-status-text">WS status</span> <i id="ws-status-icon" class="fa fa-question"></i>
+      <span id="ws-status-text">WS status</span> <i id="ws-status-icon" class="fas fa-question"></i>
     </div>
   </div>
 
@@ -22,7 +22,7 @@
     <!-- template for portlet element -->
     <template id="portlet-template">
       <div class="portlet">
-        <div class="portlet-header"><i class="fa fa-arrows"></i><i class="fa fa-times"></i></div>
+        <div class="portlet-header"><i class="fas fa-arrows-alt"></i><i class="fas fa-times"></i></div>
         <div class="portlet-content"></div>
       </div>
     </template>
