Add a timeline bar
Store previous frames and allow to replay them.

--- a/web/guili.html
+++ b/web/guili.html
@@ -12,10 +12,14 @@
       <i id="edit-configuration-icon" class="fas fa-edit"></i><i id="set-configuration-icon" class="fas fa-folder-open"></i><i id="add-portlet-icon" class="fas fa-plus"></i><i id="show-info-icon" class="fas fa-info"></i><i id="play-pause-icon" class="fa fa-sync-alt"></i>
       <ul id="set-configuration-menu"></ul><ul id="add-portlet-menu"></ul>
     </div>
-    <div id="battery-status">?</div>
+    <div id="timeline">
+      <input type="range" id="timeline-slider">
+      <span id="timeline-label">--:--:--</span>
+    </div>
     <div id="ws-status">
       <span id="ws-status-text">WS status</span> <i id="ws-status-icon" class="fas fa-question"></i>
     </div>
+    <div id="battery-status">?</div>
   </div>
 
   <div id="portlets">
