--- a/web/portlets/logs.html
+++ b/web/portlets/logs.html
@@ -1,4 +1,4 @@
-<div class="portlet-logs-backlog" style="position: absolute; top: 0; bottom: 22px; left: 0; right: 0">
+<div class="portlet-logs-backlog" style="position: absolute; top: 0; bottom: 0; left: 0; right: 0">
   <div class="portlet-code" style="position: absolute; width: 100%; overflow-y: auto; height: 100%">
   </div>
 </div>
