Finalize timeline, add controls

--- a/web/guili.html
+++ b/web/guili.html
@@ -8,12 +8,16 @@
 </head>
 <body>
   <div id="top-bar">
-    <div id="toolbar">
+    <div id="toolbar" class="vertical-center">
       <i id="edit-configuration-icon" class="fas fa-edit"></i><i id="set-configuration-icon" class="fas fa-folder-open"></i><i id="add-portlet-icon" class="fas fa-plus"></i><i id="show-info-icon" class="fas fa-info"></i><i id="play-pause-icon" class="fa fa-sync-alt"></i>
       <ul id="set-configuration-menu"></ul><ul id="add-portlet-menu"></ul>
     </div>
     <div id="timeline">
-      <input type="range" id="timeline-slider">
+      <span id="timeline-controls">
+        <select id="timeline-speed"></select>
+        <i id="timeline-play-pause" class="fas fa-pause"></i>
+      </span>
+      <input id="timeline-slider" type="range">
       <span id="timeline-label">--:--:--</span>
     </div>
     <div id="ws-status">
