Adapt meca portlet for Eurobot 2019

--- a/web/portlets/meca.html
+++ b/web/portlets/meca.html
@@ -1,1 +1,28 @@
-<object data="meca-cylinder.svg" type="image/svg+xml" style="width: 100%; padding: 3px"></object>
+<div class="portlet-title">Meca</div>
+<table style="padding: 2px">
+  <colgroup>
+    <col style="width: 1.2em"></col>
+    <col style="width: 1.2em"></col>
+    <col style="width: 1.2em"></col>
+    <col style="width: 1.2em"></col>
+    <col style="width: 1.2em"></col>
+    <col style="width: 1.2em"></col>
+  </colgroup>
+  <tbody>
+    <tr>
+      <td rowspan="2" style="text-align: center"><i class="fas fa-circle" style="color: gray"></i></td>
+      <th>L</th>
+      <td class="data-number">?</td>
+      <td style="text-align: center"><i class="fas fa-circle" style="color: white"></i></td>
+      <td style="text-align: center"><i class="fas fa-circle" style="color: white"></i></td>
+      <td style="text-align: center"><i class="fas fa-circle" style="color: white"></i></td>
+    </tr>
+    <tr>
+      <th>R</th>
+      <td class="data-number">?</td>
+      <td style="text-align: center"><i class="fas fa-circle" style="color: white"></i></td>
+      <td style="text-align: center"><i class="fas fa-circle" style="color: white"></i></td>
+      <td style="text-align: center"><i class="fas fa-circle" style="color: white"></i></td>
+    </tr>
+  </tbody>
+</table>
